--- a/src/main/resources/templates/fragments/otherreports/costocreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/costocreporte.html
@@ -146,7 +146,7 @@
             
         });
         $('#excel').click(function(){
-            $("#fromreportcostocapacitacion").attr('action', '../costosxls');
+            $("#fromreportcostocapacitacion").attr('action', '../capacitadosxls');
             $("form#fromreportcostocapacitacion").submit();
             
         });
