--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -109,7 +109,7 @@
             </form>
               <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitadores/}">Regresar</a></button>
+                        <a href="#" th:href="@{/capacitadores/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
 
                     </div>
                 </div>
