--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -99,7 +99,7 @@
                 </form> 
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/comites/}">Reg</a></button>   
+                    <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>    
                     </div>
                 </div>
             </div>
