--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -56,7 +56,13 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha de Presentación:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">Valor de estado</p>
+                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd-MMM-yyyy')}">Valor de estado</p>
+                    </div>
+                </div>
+ <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha de Presentación:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacionhasta, 'dd-MMM-yyyy')}">Valor de estado</p>
                     </div>
                 </div>
                     <!--jala los empleados-->
@@ -65,7 +71,7 @@
             </form>
             <div class="col-md-12">
                     <div class="row" align="center">
-   <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/cuadrodirectivos/}">Reg</a></button>
+   <a href="#" th:href="@{/cuadrodirectivos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a> 
                     </div>
                 </div>
         </div>
