--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -213,7 +213,7 @@
             </div>
              <div class="col-md-12">
             <div class="row" align="center">
-                 <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/diagnosticocapacitaciones/}">Reg</a></button>
+                  <a href="#" th:href="@{/diagnosticocapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a> 
                             <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                             <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
             </div>
