--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -120,6 +120,11 @@
                 </tr>
             </table>
         </form>
+         <div class="col-md-12">
+                    <div class="row" align="center">
+ <a href="#" th:href="@{/empleadoasistenciacapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a> 
+                    </div>
+                </div>
         </div>
 
 
