--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -71,8 +71,7 @@
             </form>
               <div class="col-md-12">
                     <div class="row" align="center">
- <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/inasistencias/}">Reg</a></button>
-                    </div>
+ <a href="#" th:href="@{/inasistencias/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                      </div>
                 </div>
         </div>
     </div>
