--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
@@ -168,8 +168,7 @@
 </form>
   <div class="col-md-12">
                     <div class="row" align="center">
- <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/evaluacioncapacitaciones/}">Reg</a></button>                    </div>
-                </div>
+ <a href="#" th:href="@{/evaluacioncapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>                  </div>
                             </div>
             
                         </div>
