--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -66,17 +66,19 @@
                                     <!--<li><a href="#" th:href="@{/capacitaciones/buscar/}">Buscar Capacitaciones</a></li>-->
                                     <li><a href="#" th:href="@{/capacitaciones/new/capacitacion}">Crear Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/capacitaciones/}">Consultar Capacitaciones</a></li>
+                                     <li><a href="#" th:href="@{/empleadocapacitaciones/new/empleadocapacitacion}">Asignar capacitaciones a empleados</a></li>
+                                    <li><a href="#" th:href="@{/empleadocapacitaciones/}">Consultar Capacitaciones Asignadas</a></li>
                                     <li><a href="#" th:href="@{/capacitaciones/report/}">Reporte de Capacitaciones</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown">
+<!--                            <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Capacitaciones <br> de Empleados  <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
-                                     <li><a href="#" th:href="@{/empleadocapacitaciones/new/empleadocapacitacion}">Crear EmpleadoCapacitaciones</a></li>
-                                    <li><a href="#" th:href="@{/capacitaciones/}">Consultar EmpleadoCapacitaciones</a></li>
+                                     <li><a href="#" th:href="@{/empleadocapacitaciones/new/empleadocapacitacion}">Asignar capacitaciones a empleados</a></li>
+                                    <li><a href="#" th:href="@{/empleadocapacitaciones/}">Capacitaciones Asignadas</a></li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Capacitadores <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
@@ -97,13 +99,13 @@
                                     <li><a href="#" th:href="@{/costocapacitaciones/report/}">Reporte comites</a></li>-->
                                 </ul>
                             </li>
-                            <li class="dropdown">
+<!--                            <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Asignar asistencia <br> de capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                     <li><a href="#" th:href="@{/empleadoasistenciacapacitaciones/}">Consultar EmpleadoCapacitaciones</a></li>
                                     <li><a href="#" th:href="@{/empleadoasistenciacapacitaciones/new/empleadoasistenciacapacitacion}">Crear Asistencia de Empleado <br> a Capacitaciones</a></li>
                                 </ul>
-                            </li>
+                            </li>-->
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar asistencias Capacitaciones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
