--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -66,12 +66,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <label class="col-sm-2 control-label">Categoria Capacitación(*):</label>
                         <div class="col-sm-7">
                             <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                            <select class="form-control"   required="true"  name="categoriacapacitacion"  >
-                                <option>Desarrollo laboral</option>
-                                <option>Desarrollo Personal</option>
-                                <option>Desarrollo Social</option>
-                                <option>Desarrollo del pensamiento</option>
-
+                             <select class="form-control" required="true" name="institucioncapacitador" >
+                                <option th:each="c:${catCap}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
+                            
                             </select>
                         </div>
                     </div>
@@ -95,11 +92,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <label class="col-sm-2 control-label">Departamento Responsable(*):</label>
                         <div class="col-sm-5">
                             <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                            <select class="form-control" required="true"  name="departamentoresponsable" >
-                                <option>Recursos humanos</option>
-                                <option>Finanzas</option>
-                                <option>Contabilidad</option>
-
+                            <select class="form-control" required="true" name="institucioncapacitador" >
+                                <option th:each="c:${deptoResponsalbe}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
+                            
                             </select>
                         </div>
                           <div class="popup col-sm-1"><b>
@@ -219,13 +214,17 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Estado de la Capacitación:</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control numeros" th:field="*{estadocapacitacion}"/>
+                        <div class="col-sm-2">
+                             <select class="form-control" required="true" name="institucioncapacitador" >
+                                <option th:each="c:${estadoCap}" th:value="${c.nombreestado}" th:text="${c.nombreestado}"></option>
+                            
+                            </select>
+                            <!--<input type="text" class="form-control numeros" th:field="*{estadocapacitacion}"/>-->
                         </div>
                          <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('estadocapacitacion')" onmouseout ="javascript:ocultarAyuda('estadocapacitacion')">a</a></b>
                         
-                        <span class="popuptext" id="estadocapacitacion">Ingrese el estado  de  la Capacaitación. Solo se permiten la combinacion de los digitos del 0 al 9.!.!</span>
+                        <span class="popuptext" id="estadocapacitacion">Selecccione el estad de la Capacitacion!!!!. </span>
                     </div>
                     </div>
                     
