--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH-Asignar Empleados a Capacitacion</title>
+        <title>Crear Usuario</title>
     <th:block th:include="../templates/header"></th:block>
-    
 </head>
 <body>
-    <script> Textheader('pnt_geus',document.title);</script>
-<!--    <div class="contenedorizq"><label  >pnt_geus</label>
+    <div class="contenedorizq"><label  >pnt_geus</label>
         <label  class="der">
             <script >
                 var f = new Date();
                 document.write(f.getDate() + "/" + (f.getMonth() + 1) + "/" + f.getFullYear());
             </script></label>
-    </div><br>-->
+    </div><br>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -23,143 +21,45 @@
             <div class="row text-center">
                 <img src="../../static/image/agregarusuario.png" width="150" th:src="@{/image/agregarusuario.png}"/>
             </div>
-            <h3 align="center"></h3>
+            <h3 align="center">Asignar empleados a Capacitaciones</h3>
             <div>
-<!--                <form class="form-horizontal" id="formempasis" th:object="${formempleadoasistenciacapacitacion}" th:action="@{../empleadoasistenciacapacitacion}" method="post" >
-                    
-                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Nombre Capacitacion:</label>
-                        <div class="col-sm-7">
-                        <select class="form-control" name="asistenciacapacitacion.codigoasistenciacapacitacion" id="asistencia" >
-                                <option th:each="c:${formempleadoasistenciacapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.codigocapacitacion.nombrecapacitacion}"></option>
+                <form class="form-horizontal" id="formempasis" th:object="${formasistenciaempleadocapacitacion}" th:action="@{../empleadoasistenciacapacitaciones}" method="post" >
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Nombre empleado:</label>
+                        <div class="col-sm-8">
+                        <select class="form-control" name="empleado.codigoempleado" id="empleado" >
+                                <option th:each="c:${formasistenciaempleadocapacitacion.empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
                         </select>
                         </div>
-                           <div class="popup "><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup66')" onmouseout ="javascript:ocultarAyuda('poppup66')">a</a></b>
-                        
-                        <span class="popuptext" id="poppup66">Seleccione la Capacitacion para asignar Empleados  desplegando la lista.!</span>
-                    </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-3 control-label">Nombre empleado:</label>
-                        <div class="col-sm-7">
-                        <select class="form-control" name="empleado.codigoempleado" id="empleado" >
-                                <option th:each="c:${formempleadoasistenciacapacitacion.empleados}" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                        <label class="col-sm-2 control-label">Nombre Capacitacion:</label>
+                        <div class="col-sm-8">
+                        <select class="form-control" name="asistenciacapacitacion.codigoasistenciacapacitacion" id="asistencia" >
+                                <option th:each="c:${formasistenciaempleadocapacitacion.asistenciacapacitaciones}" th:value="${c.codigoasistenciacapacitacion}" th:text="${c.ubicacionasistenciacapacitacion}"></option>
                         </select>
                         </div>
-                           <div class="popup "><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup67')" onmouseout ="javascript:ocultarAyuda('poppup67')">a</a></b>
-                        
-                        <span class="popuptext" id="poppup67">Seleccione el Empleado que asistira a la capacitacion desplegando la lista.!</span>
                     </div>
-                    </div>
-                   
+<!--                     <div class="form-group">
+                        <label class="col-sm-2 control-label">Nombre de Ubiacio Fisica:</label>
+                        <div class="col-sm-8">
+                        <select class="form-control" name="ubicacionfisica.codigoubicacion" id="asistencia" >
+                                <option th:each="c:${formasistenciaempleadocapacitacion.ubicacionesfisicas}" th:value="${c.codigoubicacion}" th:text="${c.codigoubicacion.nombreubicacion}"></option>
+                        </select>
+                        </div>
+                    </div>-->
                      <div class="col-md-12">
                         <div class="row" align="center">
                              <button type="submit" class="btn btn-default" id="btnGuardar">Agregar</button>
-                             <button type="submit" class="btn btn-success" id="btnGuardar"><span class="glyphicon glyphicon-floppy-disk"></span>Agregar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                          </div>
                     </div>
-                </form>-->
+                </form>
             </div>
         </div>
-
-        <div class="col-md-9">
-<!--            <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
-                    </div>-->
-<div class="col-md-12" style="background-color:#d9edf7;">
-    <div class="panel-info">
-        <div class="panel-heading" al>
-            <input class="col-sm-2" id="idasistencia" type="hidden" th:each="d, i : ${AsistenciaCapaLists}"  th:value="${d[__${1}__]}" />
-            <!--<input  class="col-sm-5" type="text" value="Seleccione el Empleado que asistira a la capacitacion: "  size="20"/>-->
-             <label class="col-sm-5 control-label">Seleccione el Empleado que asistira a la capacitacion:</label><input class="col-sm-6" type="text" th:each="d, i : ${AsistenciaCapaLists}" th:value="${d[__${0}__]}" readonly />
-            <!--<label class="col-sm-5 control-label" ></label>-->
-            <!--<label class="col-sm-6 control-label"  th:each="d:${formempleadoasistenciacapacitacion.asistenciacapacitaciones}" th:value="${d.codigoasistenciacapacitacion}" th:text="${d.codigocapacitacion.nombrecapacitacion}"></label>-->
-            <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup67')" onmouseout ="javascript:ocultarAyuda('poppup67')">a</a></b>
-                        
-                        <span class="popuptext" id="poppup67">Seleccione el Empleado que asistira a la capacitacion dando clic al boton con el signo + .!</span>
-                    </div>
-        </div>
     </div>
-</div>
-        <!--</div>-->
-        <h3 align="center"></h3>
-        <form class="form-horizontal" id="formp" >        
-            <table id="tablita" class="table table-striped table-bordered" >
-                <thead > 
-                    <tr >
-                    <th width="25%" >Codigo de Empleado</th>
-                    <th width="40%">Nombre de  Empleado</th>
-                    <!--<th>Fecha de Nacimiento</th>-->
-                    <!--<th>DUI</th>-->
-                    <!--<th>NIT</th>-->
-                    <th width="30%">Email</th>
-                    <th>Agregar</th>
-    <!--                <th></th>
-                    <th></th>-->
-                </tr>
-                 </thead>
-                <tr th:each="c:${formempleadoasistenciacapacitacion.empleados}">
-                    <td th:text="${c.codigoempleado}">codigoempleado</td>
-                    <td th:text="${c.nombreempleado}+ ' ' +${c.apellidoempleado}">nombreempleado</td>
-                    <!--<td th:text="${empleado.fechanacimientoempleado}">fechanacimientoempleado</td>-->                
-                    <!--<td th:text="${empleado.duiempleado}">duiempleado</td>-->
-                    <!--<td th:text="${empleado.nitempleador}">nitempleador</td>-->
-                    <td th:text="${c.emailempleado}">emailempleado</td>
-                    <!--<td><a th:href="${'../../empleadoasistenciacapacitacion/' +  1261+ '/' + c.codigoempleado}" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span></a></td>-->
-                    <td><a th:onclick="'javascript:agregar(\'' + ${c.codigoempleado} + '\');'" type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span></a></td>
-                    <!--<td><button type="submit" onclick="agregar('${c.codigoempleado}')" class="btn btn-success" ><span class="glyphicon glyphicon-plus"></span></button></td>-->
-    <!--                <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
-                    <td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Eliminar</a></td>
-                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${empleado.codigoempleado} + '\');'" >Eliminar</a></td>-->
-
-
-                </tr>
-            </table>
-        </form>
-         <div class="col-md-12">
-                    <div class="row" align="center">
- <a href="#" th:href="@{/empleadoasistenciacapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a> 
-                    </div>
-                </div>
-        </div>
-
-
-<div class="col-md-12">
-            <th:block th:include="../templates/footer"></th:block>
-        </div>
-    </div>
-
- 
  </body>
-  <script th:inline="javascript">
-      $(document).ready(function () {
-            $('#tablita').DataTable( {
-        "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    
-    
-    });
-    
-    function valid(){
-                       var foo=$("#codem").val().toString();
-                       return foo;
-                    }
-     </script> 
-     
 <script>
-    function agregar(value) {
-//        alert("codigoassitencia:" +"codigoempleado:"+value);
-        
-        $("#formp").attr('action', '../../empleadoasistenciacapacitacion/'+ $("#idasistencia").val()+"/"+value);
-//            $("#formempasis").attr('action', '../empleadoasistenciacapacitacion/');
-        $("form#formp").submit();
-      }
-    
     $(document).ready(function () {
     $('#fechaingreso').datepicker({
     dateFormat: 'yy-mm-dd'
