--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -96,7 +96,7 @@
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                                  <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/costocapacitaciones/}">Consultar Costo Capacitaciones</a></li>
-                                    <li><a href="#" th:href="@{/costocapacitaciones/report/}">Reporte comites</a></li>-->
+                                    <li><a href="#" th:href="@{/costocapacitaciones/report/}">Reporte de costo de capacitaciones</a></li>
                                 </ul>
                             </li>
 <!--                            <li class="dropdown">
