solventando problemas betillo

--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -27,7 +27,7 @@
                     <thead> 
                         <tr>
                             <th>Código</th>
-                            <th>Responsable</th>
+                            <!--th>Responsable</th-->
                             <th>Area</th>
                             <th>Descripción</th>
                             <th>Fecha Presentación Desde</th>
@@ -39,7 +39,7 @@
                     </thead>
                     <tr th:each="cuadrodirectivo : ${cuadrodirectivos}">
                         <td align="center" th:text="${cuadrodirectivo.codigocuadrodirectivo}">Codigo</td>
-                        <td th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Responsable</td>
+                        <!--td th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Responsable</td-->
                         <td th:text="${cuadrodirectivo.area}">area</td>
                         <td th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</td>
                         <td th:text="${#calendars.format(cuadrodirectivo.fechapresentaciondesde, 'dd/MM/yyyy')}">F. Presentacion Desde</td>
