--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -22,6 +22,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </div> 
         <div class="col-md-8">
             <!--<h3 align="center">Crear Capacitador</h3>-->
+             <div class="row text-center">
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+            </div><br>
             <div>
                 <form class="form-horizontal" th:object="${capacitador}" th:action="@{/capacitadores/capacitador}" method="post">
                     <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
