agrgegado cosnulta pura de empleados

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -206,10 +206,11 @@
                             </li>
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empleados <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
                                       <li><a href="#" th:href="@{/empleados/new/empleado}">Crear Empleados</a></li>
-                                    <li><a href="#" th:href="@{/empleados/}">Consultar Empleados</a></li>
+                                    <li><a href="#" th:href="@{/empleados/consulta}">Consultar Empleados</a></li>
+                                    <li><a href="#" th:href="@{/empleados/}">Gestionar Empleados</a></li>
                                   
 
                                 </ul>
