--- a/src/main/resources/templates/fragments/empleado/empleados.html
+++ b/src/main/resources/templates/fragments/empleado/empleados.html
@@ -6,16 +6,6 @@
 </head>
 <body>
     <script> Textheader('pnt_cem13',document.title);</script>
-<!--<div class="contenedorizq"><label  >pnt_cem13</label>  
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
-
-<!--<div class="container">-->
-    
     <div th:if="${not #lists.isEmpty(empleados)}" >
          <div class="row">
         <div class="col-md-3">
@@ -29,14 +19,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead> 
-                <tr >
-                <th>Codigo de Empleado</th>
-                <th>Nombre de  Empleado</th>
+                <tr>
+                <th>Codigo</th>
+                <th>Nombre</th>
                 <th>Fecha de Nacimiento</th>
                 <th>DUI</th>
                 <th>NIT</th>
                 <th>Email</th>
-                <th></th>
+                <th>Gestion</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -48,7 +38,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${empleado.duiempleado}">duiempleado</td>
                 <td th:text="${empleado.nitempleador}">nitempleador</td>
                 <td th:text="${empleado.emailempleado}">emailempleado</td>
-                <td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-info">Mostrar</a></td>
+                <td><a th:href="${'./show/' + empleado.codigoempleado}" class="btn btn-info">Gestion <br> complementaria</a></td>
                 <td><a th:href="${'./edit/' + empleado.codigoempleado}" class="btn btn-success">Editar</a></td>
                 <!--<td><a th:href="${'./delete/' + empleado.codigoempleado}" class="btn btn-danger">Eliminar</a></td>-->
                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${empleado.codigoempleado} + '\');'" >Eliminar</a></td>
