--- a/src/main/resources/templates/fragments/contacto/contactoform.html
+++ b/src/main/resources/templates/fragments/contacto/contactoform.html
@@ -283,7 +283,7 @@
             type: "success",
             icon: "success"
             }).then(function() {
-    location.href = '../../empleados/';
+    location.href = '../empleados/';
     });
     }
 
