--- a/src/main/resources/templates/fragments/contrato/contratoshow.html
+++ b/src/main/resources/templates/fragments/contrato/contratoshow.html
@@ -241,18 +241,18 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 	</script>
               <script th:inline="javascript">
     $(document).ready(function () {
-    if([[${msg}]]===0){
+    if([[${msg}]]===3){
        swal({
                 title: "Exito!",
                 text: "Registro agregado correctamente",
                 type: "success",
                 icon: "success"
        }).then(function() {
-                location.href = '../empleados/';
+                location.href = '../../empleados/';
        }); 
 }
     
-    if([[${msg}]]===1){
+    if([[${msg}]]===4){
         swal({
                 title: "ERROR!",
                 text: "Ocurrio un error en el proceso",
