--- a/src/main/resources/templates/fragments/dependiente/dependientes.html
+++ b/src/main/resources/templates/fragments/dependiente/dependientes.html
@@ -46,4 +46,28 @@
  </div>
    </div> 
 </body>
+<script th:inline="javascript">
+
+    $(document).ready(function () {
+    if ([[${msg}]] === 3){
+
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+            }).then(function() {
+    location.href = '../../empleados/';
+    });
+    }
+
+    if ([[${msg}]] === 4){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error",
+            icon: "error"
+            });
+    }
+    });</script> 
 </html>
