arreglando problema de editar y agregando imagen de acceso denegado

--- a/src/main/resources/templates/403Page.html
+++ b/src/main/resources/templates/403Page.html
@@ -8,9 +8,11 @@
 <body>
     <!-- Include _menu.html -->
 <th:block th:include="/menu"></th:block>
-
-<h3 th:if="${message != null}" th:utext="${message}" style="color: red;"></h3>
-
+<!--
+<h3 th:if="${message != null}" th:utext="${message}" style="color: red;"></h3>-->
+            <div class="row text-center">
+                        <img src="../../static/image/denegado.jpg" width="600" th:src="@{/image/denegado.jpg}"/>
+                    </div>
 <div th:if="${userInfo != null}" th:utext="${userInfo}"></div>
 <div class="col-md-12">
     <th:block th:include="footer"></th:block>
