--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -25,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div>
                 <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
                     
-                     <input type="hidden" name="codigocuadrodirectivo"/>
+                     <!--<input type="hidden" name="codigocuadrodirectivo"/>-->
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Capacitación:</label>
                         <div class="col-sm-6" >
