--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -27,7 +27,7 @@
                 <!--<h3 align="center" >Crear Comite</h3>-->
                 <div>
                     <form class="form-horizontal" onsubmit="return validateForm()" th:object="${comite}" th:action="@{../comite}" method="post">
-                        <!--          <input type="hidden" th:field="*{codigocomite}"/>-->
+                                  <input type="hidden" th:field="*{codigocomite}"/>
                         <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
                       
                        
