--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -22,8 +22,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <!--<h3 align="center" >Crear Estado</h3>-->
     <div>
         <form class="form-horizontal" th:object="${formestado}" th:action="@{../estado}" method="post">
-<!--            <input type="hidden" th:field="*{codigoestado}"/>
-            <input type="hidden" th:field="*{nombreestado}"/>-->
+            <input type="hidden" th:field="*{estado.codigoestado}"/>
+            <!--<input type="hidden" th:field="*{nombreestado}"/>-->
 <!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de estado:</label>
                 <div class="col-sm-10">
